# model-growth

./: .gitignore  CHANGES_SUMMARY.md  Explanation.md  G5_2XLARGE_ESTIMATES.md  GROWTH_PLAN.md  GROWTH_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  MODULAR_STRUCTURE.md  PHASE3_BILATERAL_GROWTH.md  PHASE3_QUICKSTART.md  QUICKSTART_VERIFICATION.md  QUICK_REFERENCE.md  README copy.md  README.md  README_EXPERIMENT.md  TEST_RUN_100_STEPS.md  VERIFICATION_OVERVIEW.txt  VERIFICATION_SUMMARY.md  config.py  p1_p2_ts.py  pyproject.toml  requirements.txt  test_growth_checks.py  train.py  train_tinystories.py
depth-expansion/: .gitignore  Agent.md  DOCUMENTATION.md  LOG_GUIDE.md  OURO_SPEC_DOCUMENTATION.md  README (1).md  create_synth.py  create_tokenizer_65k.py  dashboard.html  dashboard_og.html  data.py  log_3b_training.txt  log_kronecker_adaptive.txt  log_kronecker_adaptive_2k.txt  new-fourier-test-new.py  new-fourier-test.py  pyproject.toml  train.ipynb  train.py  train_cuda.py
depth-expansion/kernels/: README.md  __init__.py  fla_deltanet.py  triton_indexer.py  triton_indexer_streaming.py  triton_rmsnorm.py  triton_sinkhorn.py  triton_sparse_attn.py
depth-expansion/models/: __init__.py  recurrence_model_1b.py  recurrence_model_3b.py  recurrence_model_3b_unmodified.py  recurrence_model_70b.py  (+2 more)
gpu_run_logs/: p1-p2.json  p1-p2.txt
models/: __init__.py  dense_model.py  model.py  moe_model.py
transfer/: __init__.py  growth.py  simple_growth.py  simple_transfer.py  transfer.py  verify_growth_mechanics.py  weight_transfer.py
utils/: __init__.py  data.py
(+2 files in other folders)
