[project]
name = "model-growth"
version = "0.1.0"
description = "Progressive model growth: Dense → MoE training pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "transfer", "utils"]
